deploy: 056c821c23d24c8942aaa180407529b0e7282bf0

--- a/abstract.html
+++ b/abstract.html
@@ -510,7 +510,7 @@ and sharing with stakeholders.</p>
 <div class="paragraph">
 <p>The goal of the SeaLion CubeSat flight software architecture was to capture the data structures and expected behaviors of the flight software,
 such that it can be unambiguiously understood enough to be implemented,
-as well as provide full traceability and rationale for architectural elements with minimal configuration management overhead.</p>
+as well as provide full traceability and rationale for architectural elements with minimal configuration management overhead [<a href="#sealion_mission_architecture">4</a>].</p>
 </div>
 <div class="paragraph">
 <p>The MBSE approach was of interest to the SeaLion CubeSat flight software team,
@@ -523,7 +523,7 @@ it was also of interest to adopt a docs-as-code approach,
 as to yield the benefits of utilizing the same tools used to manage code,
 using version control tools (e.g., Git),
 for the configuration management of flight software architecture documentation,
-captured in a model-based approach [<a href="#docs_as_code">4</a>].</p>
+captured in a model-based approach [<a href="#docs_as_code">5</a>].</p>
 </div>
 <div class="paragraph">
 <p>Selection of a modeling language,
@@ -557,7 +557,7 @@ with relationship elements for defining traceability between modeling elements.<
 </div>
 <div class="paragraph">
 <p>For the aforementioned reasons,
-the SeaLion CubeSat flight software team downselected m30ml for specifying the SeaLion CubeSat flight software architecture [<a href="#mach30_git">5</a>].</p>
+the SeaLion CubeSat flight software team downselected m30ml for specifying the SeaLion CubeSat flight software architecture [<a href="#mach30_git">6</a>].</p>
 </div>
 </div>
 </div>
@@ -782,7 +782,7 @@ the SeaLion CubeSat flight software team downselected m30ml for specifying the S
 <p>The methodology presented in this article is an effort to reduce the painpoints associated with traditional systems engineering for the CubeSat developers.
 The ever growing number of CubeSat projects in existence demands a lightweight model-based approach that can be adopted for implementing flight software while minimizing configuration management overhead.
 Docs-as-code can be used as an approach to flight software for tight coupling between both software and documentation
-as well as providing a highly structured template to base future developments on for the CubeSat community [<a href="#sealion_mission_architecture">6</a>].
+as well as providing a highly structured template to base future developments on for the CubeSat community [<a href="#sealion_mission_architecture">4</a>].
 Future actions include validating this approach as the flight software is created based on the model-based docs-as-code approach.</p>
 </div>
 </div>
@@ -800,13 +800,13 @@ Future actions include validating this approach as the flight software is create
 <p><a id="caesar_model_based_approach"></a>[3] “CAESAR Model-Based Approach to Harness Design,” <em>Proceedings of IEEE Aerospace Conference</em>, Mar. 2020.</p>
 </div>
 <div class="paragraph">
-<p><a id="docs_as_code"></a>[4] E. Holscher, “Docs as Code,” [Online]. Available: <a href="https://www.writethedocs.org/guide/docs-as-code/" class="bare">https://www.writethedocs.org/guide/docs-as-code/</a>.</p>
+<p><a id="sealion_mission_architecture"></a>[4] “SeaLion Mission Architecture,” [Online]. Available: <a href="https://github.com/ODU-CGA-CubeSat/sealion-mission-architecture" class="bare">https://github.com/ODU-CGA-CubeSat/sealion-mission-architecture</a>.</p>
 </div>
 <div class="paragraph">
-<p><a id="mach30_git"></a>[5] J. Simmons, “Mach30 Modeling Language,” [Online]. Available: <a href="https://github.com/Mach30/m30ml" class="bare">https://github.com/Mach30/m30ml</a>.</p>
+<p><a id="docs_as_code"></a>[5] E. Holscher, “Docs as Code,” [Online]. Available: <a href="https://www.writethedocs.org/guide/docs-as-code/" class="bare">https://www.writethedocs.org/guide/docs-as-code/</a>.</p>
 </div>
 <div class="paragraph">
-<p><a id="sealion_mission_architecture"></a>[6] “SeaLion Mission Architecture,” [Online]. Available: <a href="https://github.com/ODU-CGA-CubeSat/sealion-mission-architecture" class="bare">https://github.com/ODU-CGA-CubeSat/sealion-mission-architecture</a>.</p>
+<p><a id="mach30_git"></a>[6] J. Simmons, “Mach30 Modeling Language,” [Online]. Available: <a href="https://github.com/Mach30/m30ml" class="bare">https://github.com/Mach30/m30ml</a>.</p>
 </div>
 </div>
 </div>
@@ -819,7 +819,7 @@ Future actions include validating this approach as the flight software is create
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-06-01 02:54:53 UTC
+Last updated 2022-06-01 03:00:01 UTC
 </div>
 </div>
 </body>
