--- a/abstract.html
+++ b/abstract.html
@@ -444,7 +444,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph text-center">
-<p>Sharan Asundi &lt;<a href="mailto:sasundi@odu.edu">sasundi@odu.edu</a>&gt;, Sean Marquez &lt;<a href="mailto:sean@space.coop">sean@space.coop</a>&gt;, Kevin Chiu &lt;<a href="mailto:kchiu002@odu.edu">kchiu002@odu.edu</a>&gt;</p>
+<p>Sharan Asundi &lt;<a href="mailto:sasundi@odu.edu">sasundi@odu.edu</a>&gt;,
+Sean Marquez &lt;<a href="mailto:sean@space.coop">sean@space.coop</a>&gt;,
+Kevin Chiu &lt;<a href="mailto:kchiu002@odu.edu">kchiu002@odu.edu</a>&gt;,
+Gus Williams &lt;<a href="mailto:awill098@odu.edu">awill098@odu.edu</a>&gt;,
+Jimesh D. Bhagatji &lt;<a href="mailto:jbhag001@odu.edu">jbhag001@odu.edu</a>&gt;,
+Patrick Clark &lt;<a href="mailto:pclar001@odu.edu">pclar001@odu.edu</a>&gt;</p>
 </div>
 <div class="paragraph">
 <p><span class="image"><a class="image" href="abstract.pdf"><img src="https://img.shields.io/badge/Download%20-PDF-blue" alt="Download PDF"></a></span></p>
@@ -819,7 +824,7 @@ Future actions include validating this approach as the flight software is create
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-06-01 03:00:01 UTC
+Last updated 2022-06-01 17:10:06 UTC
 </div>
 </div>
 </body>
